@@ -366,7 +366,7 @@ fd181cbe50d6d7360bbab1172b293372fbe7a1b0 data\createbigcannons\advancements\reci
 b13e187dc2983854c9936308beb20f03fb5bb686 data\create\block_hardness\item_vault.json
 0ef027e38fb552bd7a69c22e7bf238c0052b491d assets\createbigcannons\models\block\wrought_iron_drop_mortar_end.json
 6aceb15cdb3ce15c5768264eb24d5006dee66e8b assets\createbigcannons\lang\en_ud.json
-b81f0fbe150125e15cb1c7d814754b6bf7b585c9 data\minecraft\tags\blocks\mineable\axe.json
+7fa5065e32210f792d1daad2d7268247904f6252 data\minecraft\tags\blocks\mineable\axe.json
 847dd1470953cd5956b5f6edb733cdb0bafddd3c assets\createbigcannons\models\block\incomplete_bronze_autocannon_recoil_spring.json
 236281fc879d0281e93d7a9b4f7fadfbed3c31b7 data\createbigcannons\recipes\wrought_iron_cannon_end.json
 5c1df8443043b3fe3b665dba348e2ff188bcbe31 data\createbigcannons\loot_tables\blocks\cannon_cast.json
